# wiggler

./: .env.example  LICENSE  README.md  pyproject.toml
crawltop/: app.py  config.py  models.py
crawltop/agents/: base.py  cleaner.py  curator.py  linker.py  qa.py  runner.py  skills.py
crawltop/core/: cleaner.py  crawler.py  entity_linker.py  http.py  parser.py  policy_config.py  robots.py  table_extractor.py
crawltop/db/: repo.py  schema.py  schema.sql
crawltop/pipeline/: annotate.py  export.py  exporter.py  jobs.py
crawltop/providers/: base.py  brave_provider.py  exa_provider.py  registry.py
crawltop/tui/: dashboard.py  page_detail.py  search_modal.py
crawltop/vector/: base.py  embedder.py  qdrant_store.py
docs/: agents.md  roadmap.md  tos_notes.md
tests/: test_agents.py  test_config.py  test_entity_linker.py  test_export.py  test_exporter.py  test_policy.py  test_repo.py  test_schema.py  test_table_extractor.py
