[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "wiggler"
version = "0.2.0"
description = "htop for web crawlers — standalone Textual TUI crawler/scraper"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Blaine Winslow", email = "cbwinslow@users.noreply.github.com" }]
license = { text = "MIT" }
keywords = ["crawler", "scraper", "tui", "textual"]
dependencies = [
  "textual>=0.72.0",
  "httpx[http2]>=0.27.0",
  "selectolax>=0.3.21",
  "aiosqlite>=0.20.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "python-dotenv>=1.0.1",
  "rich>=13.7.1",
  "tenacity>=8.4.2",
  "trafilatura>=1.12.0",
]

[project.optional-dependencies]
ai = [
  "qdrant-client>=1.10.1",
  "langchain>=0.2.10",
  "langgraph>=0.1.9",
  "openai>=1.35.0",
]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
]

[project.scripts]
wiggler = "crawltop.app:run"

[tool.hatch.build.targets.wheel]
packages = ["crawltop"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = false
